--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
 }
 
 .wrapper{
-    max-width: 1250px;
+    max-width: 1440px;
     margin: 0 auto;
 }
 
@@ -32,6 +32,8 @@ body{
     font-size: 16px;
     position: relative;
     background: var(--orange-color);
+    border: none;
+    
 }
 
 .btn-empty{
@@ -50,11 +52,12 @@ body{
 .btn-empty a{
     text-decoration: none;
     color: #FA7436;
+  
 }
 
 .wrapper{
     margin: 0;
-    width: 1134px;
+    width: 1440px;
 }
 
 nav{
@@ -66,6 +69,14 @@ nav{
     z-index: 1;
     transition: all 500ms ease;
     position: relative;
+
+    @media (max-width:320px){
+      width: 100%;
+      margin: 0;
+      flex-direction: column;
+      align-items: flex-start;
+
+    }
     
 }
 
@@ -77,11 +88,21 @@ nav ul{
     gap: 50px;
     list-style: none;
     padding-left: 200px;
-    
+
+    @media (max-width:320px){
+    flex-direction: column;
+    padding-top: 20px;
+
+          
+    }
 }
 
 nav ul .login{
     padding-left: 100px;
+
+    @media (max-width:300px){
+      width: 100%;
+    }
 }
 
 nav ul li a{
@@ -89,9 +110,19 @@ nav ul li a{
     font-weight: 400px;
     color: #000;
     text-decoration: none;
+
+    @media (max-width:300px){
+      width: 100%;
+    
+    }
 }
 nav ul li .login{
     color: #FA7436;
+
+    @media (max-width:320px){
+      margin: 0;
+      padding-right: 100px;
+    }
 }
 
 .logo img{
@@ -108,17 +139,32 @@ nav ul li .login{
     width: 1250px;
     position: relative;
     margin-left: 80px;
-    
+
+    @media (max-width:320px){
+      margin: auto;
+      width: 100%;
+      margin-top: 100px;
+      flex-direction: column;
+      align-self: stretch;
+      gap: 50px;
+      margin-left: -130px;
+     
+    }   
 }
+
 
 .hero-section .left h1{
     font-family: "volkhov", sans-serif;
     font-weight: 900;
     font-size: 48px;
     line-height: 125%; 
-    margin-top: 100px;
 
-}
+    @media (max-width:320px){
+      margin-left: -190px;
+     
+    }
+  
+  }
 
 .journey-color{
     color: var(--orange-color);
@@ -133,7 +179,21 @@ nav ul li .login{
     padding-top: 5%;
     padding-bottom: 20px;
     color: var(--grey-color);
+
+    @media (max-width:320px){
+      margin-left: -150px;
+    
+    }
+  
  }
+
+ .hero-section .left button{
+  @media (max-width:320px){
+    align-items: center;
+    margin-left:50px
+  }
+ }
+
 
  .hero-section .left{
     flex: 1;
@@ -145,6 +205,12 @@ nav ul li .login{
     width: 785px;
     height: 585px;
     left: 916px;
+
+    @media (max-width:320px){
+      flex-direction: column;
+      margin-left: -30rem;
+
+    }
     
  }
 
@@ -277,12 +343,20 @@ nav ul li .login{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    width: 820px;
     margin-bottom: 40px;
     margin-top: -35px;
     margin-left: 250px;
-    box-shadow: -8px 8px 40px rgba(0, 0, 0, 0.1);
+    box-shadow: -8px 8px 40px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
     padding-right: 20px;
+
+    @media (max-width:320px){
+      margin-top: 18rem;
+      width: 150px;
+      padding-left: 20px;
+      padding-bottom: 20px;
+    }
   
  }
 
@@ -292,7 +366,13 @@ nav ul li .login{
     justify-content: space-evenly;
     gap: 80px;
 
- }
+     @media (max-width:320px){
+      flex-direction: column;
+      gap: 15px;
+      flex-wrap: wrap;
+      
+    }
+  }
 
  .search-bar .contents .head{
     display: flex;
@@ -311,26 +391,47 @@ nav ul li .login{
 
  .things{
    margin-top: 12rem;
-   max-width: 1134px;
-   
-   
+   max-width: 1440px;   
  }
 
  .things .container{
    position: relative;
-   margin: 0;
-   
-  
+   margin: 0; 
+
+    @media (max-width:320px){
+    width: 100%;
+    height: auto;
+   }
+    @media (max-width:1440px){
+    margin-left: -50px;
+   }
    
  }
 
- .things .container. .content .head{
-  
+ .things .container .content .head{
+    display: flex; 
+    flex-direction: column;
+    align-items:center;
+    justify-content: center;
+    width: 521px;
+    height: 142px;
+    padding-bottom: 150px;
+    padding-left: 20rem;
+    padding-top: 100px;
+    padding-right: 100px;
    
-   width: 521px;
-   height: 142px;
-   left: 699px;
-   top: 1119px;
+
+   @media (max-width:320px){
+    width: 100%;
+    padding-left: 8rem;  
+    align-self: stretch; 
+    margin-top: -90px;
+   
+    
+   }
+   @media (max-width:1440px){
+    margin-left: 50px;
+   }
    
  }
 
@@ -340,6 +441,13 @@ nav ul li .login{
    font-size: 48px;
    text-align: center;
    padding-left: 140px;
+
+@media (max-width:320px){
+     flex-direction: row;
+    margin-right: -300px;
+    margin-left: -400px;
+
+  }   
  }
 
  .things .container h1 .orange{
@@ -351,14 +459,32 @@ nav ul li .login{
    margin-top: -20px;
    padding-bottom: 15rem;
    padding-left: 140px;
+
+   @media (max-width:320px){
+     flex-direction: row;
+    margin-right: -300px;
+    margin-left: -400px;
+
+  }
+
  }
 
  .things .container .element{
    position: absolute;
    width: 180px;
    height: 130px;
-   margin-left: 60rem;
-   padding-left: 50px;
+   margin-left: 50rem;
+   padding-right: 50px;
+
+   @media (max-width:320px){
+    width: 100%;
+    height: auto;
+    padding: 20px;
+    margin-left: 0;
+   }
+    @media (max-width:1440px){
+    margin-left: 70rem;
+   }
 
  }
 
@@ -369,6 +495,15 @@ nav ul li .login{
    justify-content: space-evenly;
    gap: 10px;
    padding-bottom: 20rem;
+
+   @media (max-width:320px){
+    width: 100%;
+    flex-direction: column;
+    gap: 15rem;
+    padding: 0px 150px 200px;
+    margin-top: -50px;
+    
+   }
  }
 
  .things .container .content .cards  .bg{
@@ -409,6 +544,12 @@ nav ul li .login{
    margin-top: -10px;
    margin-left: 100px;
 
+   @media  (min-width:300px) {
+    margin-right: 20px;
+    padding-left: 10;
+    width: 100%;  
+   }
+ 
 }
 
 .things .container .cards .card-1 .line-1 img{
@@ -442,15 +583,18 @@ nav ul li .login{
 
 .exclusive{
    margin-top: 0;
-   max-width: 1134px;
+   max-width: 1440px;
    
    
  }
 
  .exclusive .container{
    position: relative;
-   margin: 0;
- }
+   margin-top: -80px;
+   @media (max-width:1440px){
+    margin-left: -40px;
+   }
+   }
 
 
  .exclusive .container h1{
@@ -459,6 +603,13 @@ nav ul li .login{
    font-size: 48px;
    text-align: center;
    padding-left: 140px;
+
+      @media (max-width:320px){
+     flex-direction: row;
+    margin-right: -200px;
+    margin-left: 20px;
+   
+   }
  }
 
  .exclusive .container h1 .orange{
@@ -470,6 +621,13 @@ nav ul li .login{
    margin-top: -20px;
    padding-bottom: 15rem;
    padding-left: 140px;
+
+ @media (max-width:320px){
+    flex-direction: row;
+    margin-right: -380px;
+    padding:0px 0px 50px 0px;
+  
+   }
  }
 
  .exclusive .container .content .cards{
@@ -479,6 +637,25 @@ nav ul li .login{
    justify-content: space-evenly;
    gap:1px;
    padding-bottom: 20rem;
+   padding-left: 120px;
+
+   @media (max-width:320px){
+    width: 100%;
+    height: auto;
+    flex-direction: column;
+   align-self: stretch;
+   justify-content:space-evenly;
+   padding: 0px 15rem 20rem ;
+   gap: 15rem;
+   margin-top: 150px;
+  }
+
+  @media (max-width:1440px){
+    /* flex-direction: row;
+    justify-content: space-evenly; */
+    margin-left: -8rem;
+    width: 100%;
+  }
  }
 
  .exclusive .container .content .cards  .bg{
@@ -601,13 +778,22 @@ nav ul li .login{
    position: absolute;
    margin-left: 620px;
    margin-top: -230px;
+
+   @media (max-width:320px){
+    margin-left: 17rem;    
+   }
+
+   @media (max-width:1440px){
+    margin-left: 45rem;
+   }
+
 }
 
 /* Vacation Part */
 
 .vacation{
    margin-top: 0;
-   max-width: 1134px;
+   max-width: 1440px;
    
    
  }
@@ -615,16 +801,34 @@ nav ul li .login{
  .vacation .container{
    position: relative;
    margin: 0;
+
+   @media (max-width:320px){
+    height: auto;
+   
+    margin-right:-15rem;
+    margin-top: -250px;
+    flex-direction: column;
+    align-self: stretch;
+   }
+
+   @media (max-width:1440px){
+    margin-left: -30px;
+   }
  }
-
-
 
  .vacation .container h1{
    font-family: "volkhov", sans-serif;
    font-weight: 900;
    font-size: 48px;
    text-align: center;
-   padding-left: 140px;
+   padding-left: 10px;
+
+   @media (max-width:320px){
+    flex-direction: row;
+    margin-right: -200px;
+    padding:0px 0px 50px 0px;
+    
+   }
  }
 
  .vacation .container h1 .orange{
@@ -634,20 +838,27 @@ nav ul li .login{
  .vacation .container .head p{
    text-align: center;
    margin-top: -20px;
-   padding-left: 140px;
+   padding-left: 10px;
+
+    @media (max-width:320px){
+    flex-direction: row;
+    margin-right: -200px;
+    padding:0px 0px 50px 0px;
+    margin-top: -50px;
+   }
  }
 
  .vacation .container .content .tree{
    position: absolute;
    margin-top: -8rem ;
-   margin-left: 58rem;
+   margin-left: 65rem;
    width: 105.51;
    height: 81;
  }
 
  .vacation .container .content .slidebar{
    position: absolute;
-   margin-left: 72rem;
+   margin-left: 70rem;
    width: 112;
    height: 40;
  }
@@ -656,9 +867,19 @@ nav ul li .login{
    position: relative;
    display: flex;
    align-items: center;
-   justify-content: space-between;
-   gap:2px;
    padding-bottom: 10rem;
+
+     @media (max-width:320px){
+    height: auto;
+    width: 100%;
+    margin-left: 50px;
+    margin-top: -90px;
+    flex-direction: column;
+    align-self: stretch;
+    align-items: center;
+    justify-items: center;
+
+   }
  }
 
  .vacation .container .content .cards .bg{
@@ -758,11 +979,18 @@ nav ul li .login{
    display: flex;
    align-items: center;
    justify-content: space-between;
+
+   @media (max-width:320px){
+    flex-direction: column;
+    justify-content:center;
+    align-items: center;
+    gap: 200px;
+   }
  }
  .testimonial .container .content .left .element{
    position: absolute;
    margin-top: -420px;
-   margin-left: 65rem;
+   margin-left: 60rem;
    
  }
 
@@ -780,6 +1008,12 @@ nav ul li .login{
 
  .testimonial .container .content .left{
    padding-left: 70px;
+
+   @media (max-width:320px){
+    margin-left:-100px;
+    margin-right: -400px;
+    
+   }
  }
 
  .testimonial .container .content .left p{
@@ -796,6 +1030,12 @@ nav ul li .login{
 
  .testimonial .container .content .right .cards{
    position: relative;
+
+   @media (max-width:320px){
+    align-items: center;
+    margin-left: 55rem;
+    
+   }
  }
 
  .testimonial .container .content .right .cards .card-1{
@@ -808,6 +1048,10 @@ nav ul li .login{
    
    margin-top: -10rem;
    margin-left: -20rem;
+
+   @media (max-width:320px){
+    padding-bottom: 25rem;
+   }
  
  }
 
@@ -887,7 +1131,10 @@ nav ul li .login{
     .blog .container{
       position: relative;
       margin: 0;
-      padding-bottom: 200px;
+      padding-bottom: 50px;
+      @media (max-width:1440px){
+        margin-left: 100px;
+      }
     }
        
 
@@ -896,9 +1143,17 @@ nav ul li .login{
       align-items:center;
       justify-content: center;
       gap: 20px;
-      margin-left: 150px;
+      margin-left: -20px;
       padding-left: 40px;
       padding-bottom: 80px;
+
+      @media (max-width:320px){
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding-left: 15rem;
+      }
      
     }
 
@@ -911,6 +1166,13 @@ nav ul li .login{
       text-align: center;
       padding-left: 160px;
       padding-bottom: 50px;
+
+      @media (max-width:320px){
+        margin-left:-150px;
+        padding-right: 100px;
+        text-align:center;
+        margin-right: -300px;
+      }
     }
    
     .blog .container .content h2 .orange{
@@ -950,13 +1212,17 @@ nav ul li .login{
     }
 
     .blog .container .bottom{
-      margin-left: 40rem;
+      margin-left: 30rem;
+      @media (max-width:320px){
+        align-items: center;
+        margin-left: 100px;
+      }
     }
 
     /* Footer Section */
 
     .footer{
-      margin-top: 0;
+      margin: 0;
       max-width: 1134px;
     
      
@@ -964,9 +1230,18 @@ nav ul li .login{
    
     .footer .container{
       position: relative;
-      margin: 0;
       
     
+    @media (max-width:1440px){
+        margin-left: -60px;
+        margin-bottom: 50rem;
+      }
+
+    @media (max-width:320px){
+      flex-direction: column;
+    }
+
+               
     }
 
     .footer .container .subscribe .bg{
@@ -977,6 +1252,12 @@ nav ul li .login{
       border-radius: 10px;
       margin-left: 80px;
       margin-bottom: 0;
+
+     @media (max-width:320px){
+      width:575px;
+      
+    }
+      
     }
 
     .footer .container .subscribe .content h3{
@@ -986,7 +1267,14 @@ nav ul li .login{
       position: absolute;
       text-align: center;
       color: #FFFFFF;
-     margin-left: 340px;
+      margin-left: 340px;
+
+      @media (max-width:320px){
+        margin-left: -1px;
+        margin-right: -250px;
+        margin-top: 0px;
+        padding-left: 80px;
+      }
     }
 
     .footer .container .subscribe .elements .tree{
@@ -996,6 +1284,12 @@ nav ul li .login{
       margin-left: 71rem;
       margin-top: 10px;
       color: #E5E5E5;
+
+      @media (max-width:320px){
+        margin-left: 30rem;
+        padding-top: 50px;
+        padding-left: 30px;
+      }
     }
 
     
@@ -1006,6 +1300,11 @@ nav ul li .login{
       margin-left: 82px;
       margin-top: 149px;
       color: #E5E5E5;
+
+      @media (max-width:320px){
+        
+        margin-top: 150px;
+      }
     }
 
     .footer .container .subscribe .content form input{
@@ -1022,6 +1321,12 @@ nav ul li .login{
       margin-left: 21rem;
       margin-top: 260px;
       z-index: 10;
+      
+      @media (max-width:320px){
+      margin-left:90px;
+      padding-right: 19.5rem;
+    }
+ 
     }
 
     .footer .container .subscribe .content form img{
@@ -1031,6 +1336,10 @@ nav ul li .login{
       z-index: 10;
       margin-left: 21.6rem;
       margin-top: 17.3rem;
+
+      @media (max-width:320px){
+      margin-left: 100px;
+    }
     }
 
     .footer .container .subscribe .content form .submit{
@@ -1047,7 +1356,11 @@ nav ul li .login{
       font-size: 16px;
       cursor: pointer;
       margin-top: 17.8rem;
-      margin-left: 52.8rem;
+      margin-left: 54.5rem;
+
+      @media (max-width:320px){
+        margin-left: 31rem;
+      }
     }
 
     .footer .container .left .logo img{
@@ -1055,12 +1368,23 @@ nav ul li .login{
       margin-left: 100px;
       margin-top: -50px;
 
+      @media (max-width:320px){
+        align-items: center;
+        padding-left: 50px;
+      }
+
     }
 
     .footer .container .left p{
       position: absolute;
       margin-top: -5PX;
       margin-left: 100px;
+
+      @media (max-width:320px){
+        align-items: center;
+        margin-right: -250px;
+        text-align:justify ;
+      }
 
     }
 
@@ -1071,11 +1395,21 @@ nav ul li .login{
       position: absolute;
       margin-top: 60px;
       margin-left: 100px;
+
+      @media (max-width:320px){
+        align-items: center;
+        padding-left: 5px;
+      }
     }
 
     .footer .container .left {
       
       padding-top: 35rem;
+
+      @media (max-width:320px){
+        align-items: center;
+        padding-left: 130px;
+      }
     }
 
     
@@ -1093,10 +1427,14 @@ nav ul li .login{
       gap: 100px;
       width: 598px;
       height: 210px;
-      padding-left: 30rem;
+      padding-left: 29rem;
       padding-top: -50px;
-      
-      
+
+      @media (max-width:320px){
+        display: flex;
+        margin-left: -34rem;
+        margin-top: 230px;
+       }
     }
 
     .footer a{
@@ -1112,6 +1450,7 @@ nav ul li .login{
     .footer ul{
       list-style: none;
       padding-left: 20px;
+
     }
     
     .footer ul li{
@@ -1122,14 +1461,18 @@ nav ul li .login{
      
       margin-left: 100px;
       margin-top: 50px;
+
+      @media (max-width:320px){
+        align-items: start;
+        margin-left:-5rem;
+      }
     }
 
     .footer .container .copyright{
       display: flex;
       align-items: center;
       justify-content: space-around;
-      width: 1325px;
-      
+      width: 1325px;      
       
     }
     
@@ -1139,17 +1482,34 @@ nav ul li .login{
       margin-left: -5px;
       padding-left: 50px;
       color: #666666;
+
+       @media (max-width:320px){
+        margin-left: -15rem;
+        padding-left: px;
+      }
     }
 
     .footer .container .copyright .right p{
       
       margin-top: -220px;
-      margin-left:45rem;
+      margin-left:40rem;
       padding-left: 50px;
-      color: #666666;   
+      color: #666666; 
+      
+       @media (max-width:320px){
+        padding-top: 30px;
+        margin-left: -58rem;
+      }
       
     }
 
     /* Media Queries */
 
-  
+  @media (max-width:1440px){
+
+    /* Header & Buttons */
+    btn{
+      padding: 16px 12px 20px;
+    }
+
+  }
